Update maven scripts to target java 8